# Big_Data_Proye_Docker

./: .gitignore  consumer.py  consumer1.py  docker-compose.yml  producer.py  producer1.py  pyproject.toml  visualization.py
Taller_1/: Taller_1.docx
geopandas-tutorial-main/: 01-introduction-geospatial-data.ipynb  02-coordinate-reference-systems.ipynb  03-spatial-relationships-joins.ipynb
kafka-data/: bootstrap.checkpoint  meta.properties  recovery-point-offset-checkpoint
kafka-data/__cluster_metadata-0/: 00000000000000015232-0000000005.checkpoint  00000000000000022428-0000000005.checkpoint  leader-epoch-checkpoint
kafka-data/weather_data-0/: leader-epoch-checkpoint  partition.metadata
